// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider   = "prisma-dbml-generator"
  outputName = "gamelab.dbml"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  USER
}

model User {
  id        Int      @id @default(autoincrement())
  username  String   @unique
  password  String
  matches   Match[]
  email     String   @unique
  role      Role     @default(USER)
  points    Int      @default(0)
  about     String   @default("No description.")
  image     String   @default("https://i.ibb.co/sV2Wj4H/logo.png")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
}

model Game {
  id          Int      @id @default(autoincrement())
  name        String
  description String
  matches     Match[]
  image       String?
  createdAt   DateTime @default(now()) @map("updated_at")
}

model Match {
  id         String    @id @default(cuid())
  gameId     Int
  userId     Int
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  game       Game      @relation(fields: [gameId], references: [id], onDelete: Cascade)
  winner     String?   @default("Undecided")
  createdAt  DateTime  @default(now()) @map("created_at")
  finishedAt DateTime? @map("finished_at")
}
