//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  username String [unique, not null]
  password String [not null]
  matches Match [not null]
  email String [unique, not null]
  role Role [not null, default: 'USER']
  points Int [not null, default: 0]
  about String [not null, default: 'No description.']
  image String [not null, default: 'https://i.ibb.co/sV2Wj4H/logo.png']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Game {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  matches Match [not null]
  image String
  createdAt DateTime [default: `now()`, not null]
}

Table Match {
  id String [pk]
  gameId Int [not null]
  userId Int [not null]
  user User [not null]
  game Game [not null]
  winner String [default: 'Undecided']
  createdAt DateTime [default: `now()`, not null]
  finishedAt DateTime
}

Enum Role {
  ADMIN
  USER
}

Ref: Match.userId > User.id [delete: Cascade]

Ref: Match.gameId > Game.id [delete: Cascade]